load("@py_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")
load("//tools/build_rules:cross_platform_image.bzl", "cross_platform_image")
load("//tools/build_rules:py_layer.bzl", "py_oci_image")

py_binary(
    name = "binary",
    srcs = [
        "__init__.py",
        "app.py",
    ],
    imports = [".."],
    main = "app.py",
    deps = [
        "//fitbit_challenges:config_py",
        "//fitbit_challenges:fitbit_client_py",
        "//fitbit_challenges:models_py",
        "//scripts:wait_for_postgres",
        requirement("requests"),
        requirement("sqlalchemy"),
        requirement("graphql_server"),
    ],
)

py_oci_image(
    name = "base_image",
    base = "@python3_image",
    binaries = [
        "//scripts:wait_for_postgres",
        ":binary",
    ],
    cmd = [
        "/scripts/wait_for_postgres",
        "/fitbit_challenges/worker/binary",
    ],
    env = {
        "FLASK_APP": "app.py",
        "FLASK_DEBUG": "True",
        "API_PORT": "5000",
        "FRONTEND_PROTOCOL": "http",
        "FRONTEND_HOST": "frontend",
        "FRONTEND_PORT": "5001",
        "DB_HOST": "pg",
        "DB_USERNAME": "admin",
        "DB_PASSWORD": "development",
        "DATABASE_NAME": "api_development",
        "FITBIT_CLIENT_ID": "testing",
        "FITBIT_CLIENT_SECRET": "testing",
        "FITBIT_VERIFICATION_CODE": "testing",
        "FLASK_SECRET_KEY": "testing",
    },
    tags = ["manual"],
)

# $ bazel run //fitbit_challenges/worker:image_tarball
# $ docker run --rm shaldengeki/fitbit-challenges-worker:latest
cross_platform_image(
    name = "image",
    image = ":base_image",
    repo_tags = ["shaldengeki/fitbit-challenges-worker:latest"],
    repository = "docker.io/shaldengeki/fitbit-challenges-worker",
    visibility = ["//fitbit_challenges/worker:__subpackages__"],
)
