load("@py_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")
load("//tools/build_rules/api_image:api_image.bzl", "api_image")

py_library(
    name = "config_py",
    srcs = ["config.py"],
    visibility = ["//home_api:__subpackages__"],
    deps = [
        "//base:flask_app_py",
    ],
)

py_library(
    name = "api_lib",
    srcs = glob(["**/*.py"]),
    data = [
        requirement("pg8000"),
    ],
    imports = [".."],
    visibility = ["//home_api/api:__subpackages__"],
    deps = [
        "//home_api/api:config_py",
        requirement("Flask"),
        requirement("flask_cors"),
        requirement("flask_migrate"),
        requirement("flask_sqlalchemy"),
        requirement("graphql_server"),
        requirement("pg8000"),
    ],
)

api_image(
    name = "api_image",
    app_package = "home_api.api.app",
    config = "//home_api:config_py",
    docker_hub_repository = "docker.io/shaldengeki/home-api-api",
    repo_tags = ["shaldengeki/home-api-api:latest"],
    deps = [":api_lib"],
)
