load("@py_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")
load("//tools/build_rules/api:defs.bzl", "graphql_api_image")

py_library(
    name = "api_lib",
    srcs = glob(["**/*.py"]),
    imports = [".."],
    visibility = ["//home_api/api:__subpackages__"],
    deps = [
        "//home_api:config_py",
        requirement("Flask"),
        requirement("flask_cors"),
        requirement("flask_migrate"),
        requirement("flask_sqlalchemy"),
        requirement("graphql_server"),
    ],
)

graphql_api_image(
    name = "api_image",
    app_package = "home_api.api.app",
    docker_hub_repository = "docker.io/shaldengeki/home-api-api",
    repo_tags = ["shaldengeki/home-api-api:latest"],
    deps = [":api_lib"],
)

py_library(
    name = "__init__",
    srcs = ["__init__.py"],
    visibility = ["//:__subpackages__"],
    deps = [":app"],
)

py_library(
    name = "app",
    srcs = ["app.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//home_api:config_py",
        "//home_api/api/graphql:schema",
        "@py_deps//graphql_server",
    ],
)
