load("@py_deps//:requirements.bzl", "requirement")
load("//tools/build_rules/api_image:api_image.bzl", "api_image")

py_library(
    name = "config_py",
    srcs = ["config.py"],
    visibility = ["//mc_manager:__subpackages__"],
    deps = [
        "//base:flask_app_py",
    ],
)

py_library(
    name = "api_lib",
    srcs = glob(["**/*.py"]),
    imports = [".."],
    visibility = ["//mc_manager/api:__subpackages__"],
    deps = [
        "//base:flask_app_py",
        requirement("Flask"),
        requirement("flask-cors"),
        requirement("Flask-Migrate"),
        requirement("Flask-SQLAlchemy"),
        requirement("graphql-core"),
        requirement("graphql-server"),
        requirement("pg8000"),
        requirement("sqlalchemy"),
    ],
)

api_image(
    name = "api_image",
    app_package = "mc_manager.api.app",
    docker_hub_repository = "docker.io/shaldengeki/mc-manager-api",
    repo_tags = ["shaldengeki/mc-manager-api:latest"],
    deps = [":api_lib"],
)
