load("@py_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("//tools/build_rules/api:defs.bzl", "graphql_api_image")

py_library(
    name = "api_lib",
    srcs = glob(["**/*.py"]),
    imports = [".."],
    visibility = ["//mc_manager/api:__subpackages__"],
    deps = [
        "//base:flask_app_py",
        requirement("Flask"),
        requirement("flask-cors"),
        requirement("Flask-Migrate"),
        requirement("Flask-SQLAlchemy"),
        requirement("graphql-core"),
        requirement("graphql-server"),
        requirement("pg8000"),
        requirement("sqlalchemy"),
    ],
)

graphql_api_image(
    name = "api_image",
    app_package = "mc_manager.api.app",
    docker_hub_repository = "docker.io/shaldengeki/mc-manager-api",
    repo_tags = ["shaldengeki/mc-manager-api:latest"],
    deps = [":api_lib"],
)

py_binary(
    name = "app",
    srcs = ["app.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":models",
        "//mc_manager:config_py",
        "//mc_manager/api/gql:schema",
        "@py_deps//graphql_server",
    ],
)

py_library(
    name = "models",
    srcs = ["models.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//mc_manager:config_py",
        "@py_deps//sqlalchemy",
    ],
)
